--- a/PDC6Module06/MainPage.xaml
+++ b/PDC6Module06/MainPage.xaml
@@ -11,6 +11,8 @@
 
         <Button Text="Accelerometer Page" Clicked="Accelerometer_Page_Clicked"></Button>
         <Button Text="Connectivity Page" Clicked="Connectivity_Page_Clicked"></Button>
+        <Button Text="Battery Page" Clicked="Battery_Page_Clicked"></Button>
+        <Button Text="Geolocation Page" Clicked="GeolocationPage_Clicked"></Button>
     </StackLayout>
 
 </ContentPage>
